mengubah warna badge

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row justify-content-center fs-5">
           <div class="col-md-4">
             <p>
                 Saya Anton Samadi, mahasiswa semester 5 program studi Ilmu Komputer Universitas Bina Bangsa Getsempena angkatan tahun 2021. Memiliki pengalaman sebagai ketua UKM divisi Pemrograman Web.
@@ -94,10 +94,10 @@
           </div>
           <div class="col-md-4">
             <p>
-                Beberapa pencapaian yang sudah saya lalui:
+                Pencapaian Projects
                 <ul>
-                  <li>Pengembangan website Himmaster - 90%</li>
-                  <li>Tugas akhir final Manajemen Project - 80%</li>
+                  <li>Pengembangan website Himaster</li>
+                  <li>Pengembangan Aplikasi peminjaman kelas berbasis web</li>
                 </ul>
               </p>
           </div>
@@ -130,15 +130,12 @@
                 alt="projects1"
               />
               <div class="card-body">
-                <h5 class="card-title">Website Himmaster</h5>
+                <h5 class="card-title">Website Himmaster <a href="https://himaster.bbg.ac.id/" class="badge bg-warning">Detail</a></h5>
                 <p class="card-text">
-                  Project pengembangan website dengan tim UKM divisi Pemrograman
+                  Project pengembangan website himpunan dengan tim UKM divisi Pemrograman
                   Web Ilmu Komputer Universitas Bina Bangsa Getsempena
-                  menggunakan Wordpress
+                  menggunakan Wordpress.
                 </p>
-                <a href="https://himaster.bbg.ac.id/" class="btn btn-primary"
-                  >Cek Detail</a
-                >
               </div>
             </div>
           </div>
@@ -150,14 +147,11 @@
                 alt="projects1"
               />
               <div class="card-body">
-                <h5 class="card-title">Website Peminjaman Kelas</h5>
+                <h5 class="card-title">Website Peminjaman Kelas <a href="" class="badge bg-warning">Detail</a></h5>
                 <p class="card-text">
                   Project pengembangan aplikasi berbais web, diajukan sebagai
-                  tugas akhir final Manajement Project
+                  tugas akhir final Manajement Project.
                 </p>
-                <a href="https://himaster.bbg.ac.id/" class="btn btn-primary"
-                  >Cek Detail</a
-                >
               </div>
             </div>
           </div>
@@ -222,16 +216,10 @@
       </svg>
     </section>
     <!-- End-contact -->
-
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
-      <p>
-        Created With <i class="bi bi-balloon-heart"></i>by
-        <a
-          href="https://www.instagram.com/antonsmd21/"
-          class="text-white fw-bold"
-          >Anton Samadi</a
-        >
+    <footer class="bg-primary text-center text-white pb-5">
+      <p>Created With <i class="bi bi-heart-fill text-danger"></i> by
+        <a href="https://www.instagram.com/antonsmd21/" class="text-white fw-bold">Anton Samadi</a>
       </p>
     </footer>
     <!-- End-Footer -->
