--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- MY CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -68,31 +70,25 @@
       <h1 class="display-4">Anton Samadi</h1>
       <p class="lead">Mahasiswa | Ilmu komputer</p>
       <p class="lead">Univeritas Bina Bangsa Getsempena</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,32L48,37.3C96,43,192,53,288,85.3C384,117,480,171,576,192C672,213,768,203,864,186.7C960,171,1056,149,1152,122.7C1248,96,1344,64,1392,48L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L60,128C120,128,240,128,360,154.7C480,181,600,235,720,229.3C840,224,960,160,1080,144C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </section>
     <!-- End-Jumbotron -->
 
     <!-- About -->
     <section id="about">
-      <div class="continer">
+      <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <p>
                 Saya Anton Samadi, mahasiswa semester 5 program studi Ilmu Komputer Universitas Bina Bangsa Getsempena angkatan tahun 2021. Memiliki pengalaman sebagai ketua UKM divisi Pemrograman Web.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left">
             <p>
                 Pencapaian Projects
                 <ul>
@@ -105,7 +101,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#797a82"
+          fill="#8acac1"
           fill-opacity="1"
           d="M0,64L60,53.3C120,43,240,21,360,37.3C480,53,600,107,720,160C840,213,960,267,1080,240C1200,213,1320,107,1380,53.3L1440,0L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
         ></path>
@@ -115,7 +111,7 @@
 
     <!-- Projects -->
     <section id="projects">
-      <div class="continer">
+      <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>My Projects</h2>
@@ -169,7 +165,7 @@
 
     <!-- Contact -->
     <section id="contact">
-      <div class="continer">
+      <div class="container">
         <div class="row text-center">
           <div class="col">
             <h2>Contact Me</h2>
@@ -229,5 +225,22 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once:true
+      });
+    </script>
+    <script>
+      const menuItems = document.querySelectorAll('.nav-link');
+      menuItems.forEach(item=>{
+        item.addEventListener('click', function(){
+          menuItems.forEach(item=>{
+            item.classList.remove('active');
+          });
+          this.classList.add('active');
+        });
+      });
+    </script>
   </body>
 </html>
